<resources>
    <string name="app_name">音乐推荐</string>
    <string name="main_title">主菜单</string>
    <string name="local_music_title">本地音乐</string>
    <string name="music_recommendation_title">推荐音乐</string>
    <string name="settings_title">设置</string>

    <string name="menu_save">保存</string>

    <string name="local_music_up_text">在本地发现了 %d 首歌曲</string>


    <!--设置界面的string-->
    <string name="setting_local_info">用户信息（*为必填项，仅用于识别不同用户以及提供更加精确的推荐）：</string>
    <string name="setting_usr_name">用户名*</string>
    <string name="setting_user_name_text">usrname</string>
    <string name="setting_usr_email">邮箱</string>
    <string name="setting_usr_email_text">usrname@example.com</string>
    <string name="setting_usr_addr">地址</string>
    <string name="setting_usr_addr_text">中国北京</string>

    <string name="setting_net_server">设置服务器信息：</string>
    <string name="setting_net_server_addr">服务器地址</string>
    <string name="setting_net_server_addr_text">127.0.0.1</string>
    <string name="setting_net_server_port">服务器端口</string>
    <string name="setting_net_server_port_text">1234</string>

    <string name="setting_label">设置喜爱的歌曲类型：</string>
    <string name="setting_label_1">流行</string>
    <string name="setting_label_2">摇滚</string>
    <string name="setting_label_3">民谣</string>
    <string name="setting_label_4">电子</string>
    <string name="setting_label_5">舞曲</string>
    <string name="setting_label_6">说唱</string>
    <string name="setting_label_7">轻音乐</string>
    <string name="setting_label_8">古典</string>


    <string name="play_item">Play item</string>
    <string name="title_activity_new_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
