<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.edu.xidian.www.mymusicpro.SettingsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:orientation="horizontal">

        <Button
            android:id="@+id/setting_button1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_button_height"
            android:layout_weight="1"
            android:text="@string/setting_button_default"
            android:onClick="OnButtonDefault"
            android:textStyle="bold" />

        <Button
            android:id="@+id/setting_button2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_button_height"
            android:layout_weight="1"
            android:text="@string/setting_button_save"
            android:onClick="OnButtonSave"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/GapimageView1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_imagine_cut"
        app:srcCompat="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView_Set1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_textview"
        android:maxLines="1"
        android:text="@string/setting_local_info" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_usr_info"
        android:layout_marginTop="@dimen/default_gap"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setting_text1"
            android:layout_width="@dimen/settings_usr_info_text_w"
            android:layout_height="wrap_content"
            android:text="@string/setting_usr_name"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:id="@+id/usr_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/settings_usr_info_right"
            android:layout_weight="1"
            android:background="@drawable/edit_bg"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:text="@string/setting_usr_name_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_usr_info"
        android:layout_marginTop="@dimen/settings_imagine_cut"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setting_text2"
            android:layout_width="@dimen/settings_usr_info_text_w"
            android:layout_height="wrap_content"
            android:text="@string/setting_usr_email"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:id="@+id/usr_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/settings_usr_info_right"
            android:layout_weight="1"
            android:background="@drawable/edit_bg"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:text="@string/setting_usr_email_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_usr_info"
        android:layout_marginTop="@dimen/settings_imagine_cut"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setting_text3"
            android:layout_width="@dimen/settings_usr_info_text_w"
            android:layout_height="wrap_content"
            android:text="@string/setting_usr_addr"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:id="@+id/usr_addr_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/settings_usr_info_right"
            android:layout_weight="1"
            android:background="@drawable/edit_bg"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:text="@string/setting_usr_addr_text" />

    </LinearLayout>

    <ImageView
        android:id="@+id/GapimageView3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_imagine_cut"
        android:layout_marginTop="@dimen/default_gap"
        app:srcCompat="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView_Set2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_textview"
        android:maxLines="1"
        android:text="@string/setting_net_server" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_usr_info"
        android:layout_marginTop="@dimen/default_gap"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setting_text4"
            android:layout_width="@dimen/settings_usr_info_text_w"
            android:layout_height="wrap_content"
            android:text="@string/setting_net_server_addr"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:id="@+id/server_addr_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/settings_usr_info_right"
            android:layout_weight="1"
            android:background="@drawable/edit_bg"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:text="@string/setting_net_server_addr_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_usr_info"
        android:layout_marginTop="@dimen/settings_imagine_cut"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setting_text5"
            android:layout_width="@dimen/settings_usr_info_text_w"
            android:layout_height="wrap_content"
            android:text="@string/setting_net_server_port"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:id="@+id/server_port_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/settings_usr_info_right"
            android:layout_weight="1"
            android:background="@drawable/edit_bg"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:text="@string/setting_net_server_port_text" />

    </LinearLayout>

    <ImageView
        android:id="@+id/GapimageView4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_imagine_cut"
        android:layout_marginTop="@dimen/default_gap"
        app:srcCompat="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView_Set3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_textview"
        android:maxLines="1"
        android:text="@string/setting_personal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_laber_lay_h"
        android:layout_marginTop="@dimen/default_gap"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_textview"
            android:text="@string/setting_label"
            android:textColor="@color/colorBlack" />

        <TableLayout
            android:id="@+id/laber_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CheckBox" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CheckBox" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CheckBox" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CheckBox" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CheckBox" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CheckBox" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <CheckBox
                    android:id="@+id/checkBox10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CheckBox" />

                <CheckBox
                    android:id="@+id/checkBox9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CheckBox" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

        <GridView
            android:id="@+id/laber_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </GridView>

    </LinearLayout>


</LinearLayout>
